--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "suha hwang",
   "license": "ISC",
   "dependencies": {
+    "@mapbox/mapbox-sdk": "^0.15.1",
+    "cloudinary": "^1.36.4",
     "connect-flash": "^0.1.1",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
@@ -20,6 +22,8 @@
     "method-override": "^3.0.0",
     "mongoose": "^7.1.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^2.0.22",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
