--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@mapbox/mapbox-sdk": "^0.15.1",
     "cloudinary": "^1.36.4",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.0.0",
+    "connect-mongodb-session": "^3.1.1",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "ejs-mate": "^4.0.0",
@@ -22,6 +24,7 @@
     "helmet": "^7.0.0",
     "joi": "^17.9.2",
     "method-override": "^3.0.0",
+    "mongodb": "^5.4.0",
     "mongoose": "^7.1.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
